2007-10-03  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac: NEWS: Post-release commit.

	* README, configure.ac, NEWS: Preparing 0.7 release.

2007-09-25  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): There is no such thing as an "auto"
	--output-type.

	* parse.c (parse): Just in case, check for a short read on the
	packet.

2007-09-24  David Shaw  <dshaw@jabberwocky.com>

	* AUTHORS, Makefile.am, paperkey.spec.in, paperkey.1: Add man page
	thanks to Peter Palfrader.

	* restore.h, restore.c (restore): Pass in secrets FILE* from
	outside.  Don't do the reopen-as-text trickery since even Win32
	doesn't need it.
	paperkey.c (main): Call it from here.  This allows for secrets to
	come in on stdin.

2007-09-22  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac, NEWS: Release version 0.6.

	* output.h, output.c (do_crc24): Better CRC24 implementation.
	parse.c (read_secrets_file), output.c (output_bytes): Call it
	here.

	* README: Bar codes, of course, have many of the disadvantages of
	non-human-readable media.

	* paperkey.c (usage): Options.

	* parse.c (read_secrets_file), output.c (output_finish,
	output_bytes, print_base16): Add a CRC on RAW output as well.
	(parse): Note that we don't support armored data.

	* NEWS, README: Update.

	* parse.c (read_secrets_file), output.c (print_base16): Add an
	overall CRC that covers the whole secrets file.

	* output.c (output_length16): Fix sizing bug.  Thanks to Peter
	Palfrader.
	(output_start): Show what version of paperkey generated a given
	file.

	* extract.c (extract), restore.c (extract_keys): Include a version
	number in the secrets, in case the format needs to change in the
	future.

	* restore.c (extract_keys): Some more rigorous consistency
	checking when pulling apart the secret image.  It's possible that
	OCR or the like mangled it.

	* parse.c (extract_secrets): We're not going to support v3 keys.

	* restore.c (restore): Properly handle extracting a public key out