@@ -99,6 +99,23 @@ print_bytes(FILE *stream,const unsigned char *buf,size_t length)
     fprintf(stream,"%02X",buf[i]);
 }
 
+void
+output_file_format(FILE *stream,const char *prefix)
+{
+  fprintf(stream,"%sFile format:\n",prefix);
+  fprintf(stream,"%sa) 1 octet:  version of the paperkey format (currently 0).\n",prefix);
+  fprintf(stream,"%sb) 1 octet:  OpenPGP key version (currently 4)\n",prefix);
+  fprintf(stream,"%sc) n octets: Key fingerprint (20 octets for a version 4 key)\n",prefix);
+  fprintf(stream,"%sd) 2 octets: 16-bit length of the following secret data\n",prefix);
+  fprintf(stream,"%se) n octets: secret data: an OpenPGP secret key or subkey as specified in\n",prefix);
+  fprintf(stream,"%s             RFC-4880, starting with the string-to-key usage octet and\n",prefix);
+  fprintf(stream,"%s             continuing until the end of the packet.\n",prefix);
+  fprintf(stream,"%sRepeat fields b through e as needed to cover all subkeys.\n",prefix);
+  fprintf(stream,"%sTo recover, use the fingerprint to match an existing public key with the\n",prefix);
+  fprintf(stream,"%scorresponding secret data, then append field e to the public key to\n",prefix);
+  fprintf(stream,"%screate a secret key.\n",prefix);
+}
+
 int
 output_start(const char *name,enum data_type type,
 	     unsigned char fingerprint[20])
@@ -133,7 +150,10 @@ output_start(const char *name,enum data_type type,
 	print_bytes(output,fingerprint,20);
 	fprintf(output,"\n");
 	fprintf(output,"# Base 16 data extracted %.24s\n",ctime(&now));
-	fprintf(output,"# Created with " PACKAGE_STRING " by David Shaw\n");
+	fprintf(output,"# Created with " PACKAGE_STRING " by David Shaw\n\n");
+	output_file_format(output,"# ");
+	fprintf(output,"# Each base 16 line ends with a CRC-24 of that line.\n");
+	fprintf(output,"# The entire block of data ends with a CRC-24 of the entire block of data.\n\n");
       }
       break;
     }
